// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate (sorting) sorting rules and configs case-insensitive sorts correctly 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.

| Name                 | 💼                                     |
| :------------------- | :------------------------------------- |
| [a](docs/rules/a.md) | ![badge-a][] ![badge-B][] ![badge-c][] |
| [B](docs/rules/B.md) |                                        |
| [c](docs/rules/c.md) |                                        |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (sorting) sorting rules and configs case-insensitive sorts correctly 2`] = `
"# test/a

💼 This rule is enabled in the following configs: \`a\`, \`B\`, \`c\`.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (sorting) sorting rules and configs case-insensitive sorts correctly 3`] = `
"# B

<!-- end auto-generated rule header -->
"
`;

exports[`generate (sorting) sorting rules and configs case-insensitive sorts correctly 4`] = `
"# c

<!-- end auto-generated rule header -->
"
`;
